@@ -1,4 +1,4 @@
-include Setup.in *.py WHATSNEW readme.txt
+include Setup.in *.py WHATSNEW readme.txt install.html
 recursive-include docs *
 recursive-include lib *
 recursive-include src *
